fix: added simple frontend